--- a/capstoneproject/frontend/src/components/Login.css
+++ b/capstoneproject/frontend/src/components/Login.css
@@ -9,17 +9,17 @@
     align-items: center;
     position: relative; /* Needed for background effect */
     overflow: hidden;
-    color: white;
     font-family: "Poppins", sans-serif;
 }
 
 /* Spline Viewer Styling */
 spline-viewer {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
+    z-index: -1; /* Ensure the Spline viewer stays behind the login form */
 }
 
 /* Hide the Built with Spline watermark */
